# Intelligent-Maneuver

./: .gitignore  Charter.doc  README.txt
ARDroneCode/Protocol/: Makefile  app.c  app.h  ardrone_demo  at_cmds.c  main.c  navdata.c  vlib.c  vlib.h
ARDroneCode/process_sensor_data/: filter.py  sensor_data.csv  sensor_data_90roll.csv  sensor_data_90tilt.csv  sensor_data_forward_backward.csv  sensor_data_hover.csv  sensor_data_rest.csv  sensor_data_side_to_side.csv  to_csv.py
ARDroneCode/read_input/Sources/: ardrone_testing_tool.c
ARDroneCode/read_input/Sources/Navdata/: navdata.c
final/: .gitignore  Makefile  foo.dump  start.sh  stop.sh
final/ARDrone/Sources/: ardrone_testing_tool.c  memdb.h
final/ARDrone/Sources/Navdata/: navdata.c
final/Control/: .gitignore  CMakeLists.txt  README  control.cpp  control.h  feedback.cpp  feedback.h  memdb.h  pathfinder.cpp  pathfinder.h
final/Lidar/: CMakeLists.txt  Makefile  readlidar  readlidar.cpp
final/Ultrasonic/: .gitignore  CMakeLists.txt  readultrasonic  readultrasonic.cpp  ultrasonic_simulator.cpp
final/memdb/: memdb.h  memdb.py
path_finding/: .gitignore  CMakeLists.txt  README  icp-slam_demo_classic.ini  pathfinder.cpp  pathfinder.h  read_log.cpp
